wip: events ingestion
